--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -22,7 +22,7 @@ jobs:
           ### content
           SHOW_TITLE: true # optional
           SECTION_NAME: WakaTime # optional
-          BLOCKS: █░ # optional
+          BLOCKS: ░█ # optional
           CODE_LANG: python # optional
           TIME_RANGE: all_time # optional
           LANG_COUNT: 10 # optional
