--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -5,37 +5,25 @@ on:
   workflow_dispatch:
   schedule:
     # runs at 12 AM UTC (5:30 AM IST)
-    - cron: "0 0,12 * * *"
+    - cron: "0 0 * * *"
 
 jobs:
   update-readme:
     name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-        # this action name
-      - uses: athul/waka-readme@master # do NOT replace with anything else
+      - uses: athul/waka-readme@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }} # required
-          ### meta
-          API_BASE_URL: https://wakatime.com/api # optional
-          REPOSITORY: h-off-nung/h-off-nung # optional
-          ### content
-          SHOW_TITLE: true # optional
-          SECTION_NAME: WakaTime # optional
-          BLOCKS: ░▓ # optional
-          CODE_LANG: txt # optional
-          TIME_RANGE: all_time # optional
-          LANG_COUNT: 10 # optional
-          SHOW_TIME: true # optional
-          SHOW_TOTAL: true # optional
-          SHOW_MASKED_TIME: false # optional
-          STOP_AT_OTHER: false # optional
-          IGNORED_LANGUAGES: YAML JSON TOML # optional
-          ### commit
-          COMMIT_MESSAGE: NOT_SET
-          TARGET_BRANCH: NOT_SET
-          TARGET_PATH: NOT_SET
-          COMMITTER_NAME: NOT_SET
-          COMMITTER_EMAIL: NOT_SET
-          AUTHOR_NAME: NOT_SET
-          AUTHOR_EMAIL: NOT_SET
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          API_BASE_URL: https://wakatime.com/api
+          REPOSITORY: h-off-nung/h-off-nung
+          SHOW_TITLE: true
+          SECTION_NAME: WakaTime
+          BLOCKS: ░▓
+          CODE_LANG: txt
+          TIME_RANGE: all_time
+          SHOW_TIME: true
+          SHOW_TOTAL: true
+          SHOW_MASKED_TIME: true
+          STOP_AT_OTHER: true
+          IGNORED_LANGUAGES: YAML JSON TOML
